load("@npm//:defs.bzl", "npm_link_all_packages")
load("//dev:defs.bzl", "npm_package", "ts_project")

# TODO(bazel): currently handled with #keep
# gazelle:js_ignore_imports **/postcss.config

load("@aspect_rules_ts//ts:defs.bzl", "ts_config")

npm_link_all_packages(name = "node_modules")

ts_config(
    name = "tsconfig",
    src = "tsconfig.json",
    visibility = ["//client:__subpackages__"],
    deps = [
        "//:tsconfig",
    ],
)

ts_project(
    name = "build-config_lib",
    srcs = [
        "src/esbuild/monacoPlugin.ts",
        "src/esbuild/packageResolutionPlugin.ts",
        "src/esbuild/plugins.ts",
        "src/esbuild/stylePlugin.ts",
        "src/esbuild/workerPlugin.ts",
        "src/index.ts",
        "src/paths.ts",
        "src/utils/environment-config.ts",
        "src/webpack/babel-loader.ts",
        "src/webpack/css-loader.ts",
        "src/webpack/getCacheConfig.ts",
        "src/webpack/monaco-editor.ts",
        "src/webpack/plugins.ts",
    ],
    data = [
        "//:node_modules/@statoscope/webpack-plugin",
        "//:node_modules/babel-loader",  #keep
        "//:node_modules/css-loader",  #keep
        "//:node_modules/enhanced-resolve",
        "//:node_modules/esbuild",
        "//:node_modules/monaco-editor",  #keep
        "//:node_modules/monaco-editor-webpack-plugin",
        "//:node_modules/postcss",
        "//:node_modules/postcss-loader",  #keep
        "//:node_modules/postcss-modules",
        "//:node_modules/sass",
        "//:node_modules/sass-loader",  #keep
        "//:node_modules/signale",
        "//:node_modules/style-loader",  #keep
        "//:node_modules/terser-webpack-plugin",
        "//:node_modules/webpack",
    ],
    tsconfig = ":tsconfig",
    deps = [
        "//:node_modules/@statoscope/webpack-plugin",
        "//:node_modules/@types/node",
        "//:node_modules/@types/sass",
        "//:node_modules/@types/signale",
        "//:node_modules/enhanced-resolve",
        "//:node_modules/esbuild",
        "//:node_modules/monaco-editor",  #keep
        "//:node_modules/monaco-editor-webpack-plugin",
        "//:node_modules/postcss",
        "//:node_modules/postcss-modules",
        "//:node_modules/sass",
        "//:node_modules/signale",
        "//:node_modules/terser-webpack-plugin",
        "//:node_modules/webpack",
    ],
)

npm_package(
    name = "build-config",
    srcs = [
        "package.json",
        ":build-config_lib",
    ],
)
