load("@aspect_rules_ts//ts:defs.bzl", "ts_config")
load("@npm//:defs.bzl", "npm_link_all_packages")
load("//dev:defs.bzl", "ts_project")
load("//dev:eslint.bzl", "eslint_config_and_lint_root")

npm_link_all_packages(name = "node_modules")

eslint_config_and_lint_root()

ts_config(
    name = "tsconfig",
    src = "tsconfig.json",
    visibility = ["//client:__subpackages__"],
    deps = [
        "//:tsconfig",
        "//client/cody-shared:tsconfig",
        "//client/common:tsconfig",
    ],
)

ts_project(
    name = "cody-agent",
    srcs = [
        "src/agent.ts",
        "src/completion/manual.ts",
        "src/editor.ts",
        "src/history.ts",
        "src/index.ts",
        "src/jsonrpc.ts",
        "src/offsets.ts",
        "src/protocol.ts",
    ],
    tsconfig = ":tsconfig",
    deps = [
        ":node_modules/@sourcegraph/cody-shared",
        "//:node_modules/@types/node",
        "//:node_modules/url",
    ],
)

ts_project(
    name = "cody-agent_tests",
    testonly = True,
    srcs = [
        "src/index.test.ts",
    ],
    tsconfig = ":tsconfig",
    deps = [
        ":cody-agent",
        ":node_modules/@sourcegraph/cody-shared",
        "//:node_modules/@types/node",
    ],
)
