load("@aspect_rules_ts//ts:defs.bzl", "ts_config")
load("@npm//:defs.bzl", "npm_link_all_packages")
load("//dev:defs.bzl", "npm_package", "ts_project")
load("//dev:eslint.bzl", "eslint_config_and_lint_root")

npm_link_all_packages(name = "node_modules")

eslint_config_and_lint_root()

ts_config(
    name = "tsconfig",
    src = "tsconfig.json",
    visibility = ["//client:__subpackages__"],
    deps = ["//:tsconfig"],
)

ts_project(
    name = "cody-shared_lib",
    srcs = [
        "src/chat/bot-response-multiplexer.ts",
        "src/chat/chat.ts",
        "src/chat/client.ts",
        "src/chat/context.ts",
        "src/chat/markdown.ts",
        "src/chat/preamble.ts",
        "src/chat/prompts/default-prompts.json",
        "src/chat/prompts/index.ts",
        "src/chat/prompts/templates.ts",
        "src/chat/prompts/utils.ts",
        "src/chat/recipes/browser-recipes.ts",
        "src/chat/recipes/chat-question.ts",
        "src/chat/recipes/explain-code-detailed.ts",
        "src/chat/recipes/explain-code-high-level.ts",
        "src/chat/recipes/find-code-smells.ts",
        "src/chat/recipes/generate-docstring.ts",
        "src/chat/recipes/generate-test.ts",
        "src/chat/recipes/helpers.ts",
        "src/chat/recipes/improve-variable-names.ts",
        "src/chat/recipes/langs.ts",
        "src/chat/recipes/recipe.ts",
        "src/chat/recipes/translate.ts",
        "src/chat/transcript/index.ts",
        "src/chat/transcript/interaction.ts",
        "src/chat/transcript/messages.ts",
        "src/chat/typewriter.ts",
        "src/chat/useClient.ts",
        "src/chat/viewHelpers.ts",
        "src/codebase-context/index.ts",
        "src/codebase-context/messages.ts",
        "src/codebase-context/rerank.ts",
        "src/common/index.ts",
        "src/common/markdown/contributions.ts",
        "src/common/markdown/index.ts",
        "src/common/markdown/markdown.ts",
        "src/common/markdown/types.d.ts",
        "src/common/paths.ts",
        "src/configuration.ts",
        "src/editor/index.ts",
        "src/editor/withPreselectedOptions.ts",
        "src/embeddings/client.ts",
        "src/embeddings/index.ts",
        "src/experimentation/FeatureFlagProvider.ts",
        "src/graph-context/index.ts",
        "src/guardrails/client.ts",
        "src/guardrails/index.ts",
        "src/index.ts",
        "src/intent-detector/client.ts",
        "src/intent-detector/index.ts",
        "src/local-context/index.ts",
        "src/prompt/constants.ts",
        "src/prompt/prompt-mixin.ts",
        "src/prompt/templates.ts",
        "src/prompt/truncation.ts",
        "src/sourcegraph-api/completions/browserClient.ts",
        "src/sourcegraph-api/completions/client.ts",
        "src/sourcegraph-api/completions/nodeClient.ts",
        "src/sourcegraph-api/completions/parse.ts",
        "src/sourcegraph-api/completions/types.ts",
        "src/sourcegraph-api/environments.ts",
        "src/sourcegraph-api/errors.ts",
        "src/sourcegraph-api/graphql/client.ts",
        "src/sourcegraph-api/graphql/index.ts",
        "src/sourcegraph-api/graphql/queries.ts",
        "src/sourcegraph-api/graphql/url.ts",
        "src/sourcegraph-api/index.ts",
        "src/sourcegraph-api/utils.ts",
        "src/telemetry/EventLogger.ts",
        "src/telemetry/index.ts",
        "src/unified-context/client.ts",
        "src/unified-context/index.ts",
        "src/utils.ts",
    ],
    tsconfig = ":tsconfig",
    deps = [
        ":node_modules/@microsoft/fetch-event-source",
        ":node_modules/@types/dompurify",
        ":node_modules/@types/highlight.js",
        ":node_modules/@types/isomorphic-fetch",
        ":node_modules/@types/lodash",
        ":node_modules/@types/marked",
        ":node_modules/dompurify",
        ":node_modules/highlight.js",
        ":node_modules/isomorphic-fetch",
        ":node_modules/lodash",
        ":node_modules/marked",
        ":node_modules/vscode-uri",
        ":node_modules/x2js",
        "//:node_modules/@types/node",
        "//:node_modules/@types/react",
        "//:node_modules/react",
        "//client/wildcard:wildcard_lib",
    ],
)

npm_package(
    name = "cody-shared_pkg",
    srcs = [
        "package.json",
        ":cody-shared_lib",
    ],
)
